# bot-discord

./: core.py  discor.py  pyproject.toml
